# p4-to-git-mergetastic

./: .gitignore  README.md  p4-to-git-mergetastic  pyproject.toml
data/: mailmap.txt  message-replacements-non-utf8.txt
data/labels-extra/: openwatcom_1.0.0.txt
src/: branchmap.py  filelogs-export-check-progress.sh  git.py  main.sh  make_merges.py  make_tags.py  message-replacements-changeset-format.txt  split-branches.sh
src/p4/: filelog.py
